# GLA_FP2

./: README.md  _TODO.txt  protect-the-lambda.cabal
src/Tafl/: Core.hs  Interact.hs  Logic.hs  Options.hs  Process.hs  report.html
tests-private-whole-program/: Tests.hs  Whole.hs
tests-private-whole-program/capture-001/: output
tests-public-whole-program/: Tests.hs  Utils.hs  Whole.hs
tests-public-whole-program/capture-002/: output
tests-public-whole-program/complete-001/: actual_session.txt  expected  input  run
tests-public-whole-program/interact-001/: expected
tests-public-whole-program/loadsave-001/: output
tests-public-whole-program/moves-001/: expected
tests-public-whole-program/special-001/: output
