name:                protect-the-lambda
version:             0.1.0.0
-- synopsis:
-- description:
-- homepage:
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple

extra-source-files:  README.md

cabal-version:       >=1.10

library
  hs-source-dirs:      src

  -- List your modules in `src` here.
  exposed-modules:     Tafl.Process
                     , Tafl.Core
                     , Tafl.Interact
                     , Tafl.Options
                     , Tafl.Logic

  -- List your dependancies here.
  build-depends:       base >= 4.7 && < 5
                     , optparse-applicative >= 0.13.0.0
                     , split

  default-language:    Haskell2010

executable protect-the-lambda
  hs-source-dirs:      main
  main-is:             Main.hs

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , protect-the-lambda
                     , split

  default-language:    Haskell2010

test-suite public-whole-program-test-suite
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests-public-whole-program

  main-is:             Tests.hs
  other-modules:       Whole
                     , Utils

  build-depends:       base
                     , directory
                     , filepath
                     , process
                     , split
                     , tasty
                     , tasty-html
                     , tasty-golden
                     , tasty-rerun
                     , tasty-hunit
                     , tasty-stats
                     , tasty-ant-xml
                     , protect-the-lambda

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite private-whole-program-test-suite
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests-private-whole-program

  main-is:             Tests.hs
  other-modules:       Whole
                     , Utils

  build-depends:       base
                     , directory
                     , filepath
                     , process
                     , split
                     , tasty
                     , tasty-html
                     , tasty-golden
                     , tasty-rerun
                     , tasty-hunit
                     , tasty-stats
                     , tasty-ant-xml
                     , protect-the-lambda

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
